--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.9.5",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.7",
     "@mui/material": "^5.15.7",
     "@reduxjs/toolkit": "^2.1.0",
     "axios": "^1.6.7",
+    "crypto-js": "^4.1.1",
     "html5-qrcode": "^2.3.8",
     "next": "13.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-cookie": "^7.0.2",
     "react-dom": "^18",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
@@ -28,6 +31,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
