--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-cookie": "^7.0.2",
     "react-dom": "^18",
+    "react-lottie-player": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.4",
     "react18-input-otp": "^1.1.4",
