--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "crypto-js": "^4.1.1",
     "html5-qrcode": "^2.3.8",
     "next": "13.4",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-cookie": "^7.0.2",
